crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__add_future_import__TC001-TC002-TC003_TC001-3_future.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Move standard library import `collections.Counter` into a type-checking block
 --> TC001-3_future.py:1:25
  |
1 | from collections import Counter
  |                         ^^^^^^^
2 |
3 | from elsewhere import third_party
  |
help: Move into type-checking block
  |
1 + 
2 |
…
5 | from . import first_party
6 + from typing import TYPE_CHECKING
7 ~ 
8 + if TYPE_CHECKING:
9 +     from collections import Counter
  |
note: This is an unsafe fix and may change runtime behavior

TC002 [*] Move third-party import `elsewhere.third_party` into a type-checking block
 --> TC001-3_future.py:3:23
  |
1 | from collections import Counter
2 |
3 | from elsewhere import third_party
  |                       ^^^^^^^^^^^
4 |
5 | from . import first_party
  |
help: Move into type-checking block
  |
3 + 
4 |
5 | from . import first_party
6 + from typing import TYPE_CHECKING
7 ~ 
8 + if TYPE_CHECKING:
9 +     from elsewhere import third_party
  |
note: This is an unsafe fix and may change runtime behavior

TC001 [*] Move application import `.first_party` into a type-checking block
 --> TC001-3_future.py:5:15
  |
3 | from elsewhere import third_party
4 |
5 | from . import first_party
  |               ^^^^^^^^^^^
help: Move into type-checking block
  |
5 + 
6 + from typing import TYPE_CHECKING
7 ~ 
8 + if TYPE_CHECKING:
9 +     from . import first_party
  |
note: This is an unsafe fix and may change runtime behavior
