crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__add_future_import__TC001_TC001.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC001 [*] Move application import `.TYP001` into a type-checking block
  --> TC001.py:20:19
   |
19 | def f():
20 |     from . import TYP001
   |                   ^^^^^^
21 |
22 |     x: TYP001
   |
help: Move into type-checking block
2  | 
3  | For typing-only import detection tests, see `TC002.py`.
4  | """
5  + from typing import TYPE_CHECKING
6  + 
7  + if TYPE_CHECKING:
8  +     from . import TYP001
9  | 
10 | 
11 | def f():
--------------------------------------------------------------------------------
21 | 
22 | 
23 | def f():
   -     from . import TYP001
24 | 
25 |     x: TYP001
26 | 
note: This is an unsafe fix and may remove comments or change runtime behavior
