crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__add_future_import__TC001_TC001_future_present.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC001 [*] Move application import `.first_party` into a type-checking block
 --> TC001_future_present.py:3:15
  |
1 | from __future__ import annotations
2 |
3 | from . import first_party
  |               ^^^^^^^^^^^
help: Move into type-checking block
  |
3 + 
4 + from typing import TYPE_CHECKING
5 ~ 
6 + if TYPE_CHECKING:
7 +     from . import first_party
  |
note: This is an unsafe fix and may change runtime behavior
