crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__add_future_import__TC010_TC010_future_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC010 Invalid string member in `X | Y`-style union type
  --> TC010_future_1.py:18:30
   |
16 | type A = Value["int" | str]  # OK
17 |
18 | OldS = TypeVar('OldS', int | 'str', str)  # TC010
   |                              ^^^^^
   |
help: Add `from __future__ import annotations`
