crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__add_future_import__TC010_TC010_future_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC010 [*] Invalid string member in `X | Y`-style union type
  --> TC010_future_2.py:16:30
   |
14 | type A = Value["int" | str]  # OK
15 |
16 | OldS = TypeVar('OldS', int | 'str', str)  # TC010
   |                              ^^^^^
   |
help: Add `from __future__ import annotations` and unquote
1  + from __future__ import annotations
2  | from typing import TypeVar
3  | 
4  | 
--------------------------------------------------------------------------------
14 | 
15 | type A = Value["int" | str]  # OK
16 | 
   - OldS = TypeVar('OldS', int | 'str', str)  # TC010
17 + OldS = TypeVar('OldS', int | str, str)  # TC010
note: This is an unsafe fix and may change runtime behavior
