crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__add_future_import__first-party-import-third-party-import-standard-library-import_TC001-3_future.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Make standard library import `collections.Counter` lazy
 --> TC001-3_future.py:1:25
  |
1 | from collections import Counter
  |                         ^^^^^^^
2 |
3 | from elsewhere import third_party
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
  - from collections import Counter
1 + lazy from collections import Counter
2 |
  |
note: This is an unsafe fix and may change runtime behavior

TC002 [*] Make third-party import `elsewhere.third_party` lazy
 --> TC001-3_future.py:3:23
  |
1 | from collections import Counter
2 |
3 | from elsewhere import third_party
  |                       ^^^^^^^^^^^
4 |
5 | from . import first_party
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
2 |
  - from elsewhere import third_party
3 + lazy from elsewhere import third_party
4 |
  |
note: This is an unsafe fix and may change runtime behavior

TC001 [*] Make application import `.first_party` lazy
 --> TC001-3_future.py:5:15
  |
3 | from elsewhere import third_party
4 |
5 | from . import first_party
  |               ^^^^^^^^^^^
help: Convert to a lazy import (or move into a type-checking block)
  |
4 |
  - from . import first_party
5 + lazy from . import first_party
6 |
  |
note: This is an unsafe fix and may change runtime behavior
