crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__add_future_import__first-party-import_TC001_future_present.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC001 [*] Make application import `.first_party` lazy
 --> TC001_future_present.py:3:15
  |
1 | from __future__ import annotations
2 |
3 | from . import first_party
  |               ^^^^^^^^^^^
help: Convert to a lazy import (or move into a type-checking block)
  |
2 |
  - from . import first_party
3 + lazy from . import first_party
4 |
  |
note: This is an unsafe fix and may change runtime behavior
